--- a/.styleci.yml
+++ b/.styleci.yml
@@ -1,9 +1,9 @@
 preset: laravel
 
-disabled:
-  - not_operator_with_successor_space
-  - concat_without_spaces
+risky: false
 
 finder:
-  exclude:    
-    - "vendor"
+  exclude:
+    - "config"
+  name:
+    - "*.php"
