--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,32 @@
 {
     "name": "mazfreelance/laravel-command-generator",
     "description": "This is a simple package that includes some of custom Laravel artisan command into Laravel/Lumen.",
+    "keywords": [
+        "laravel",
+        "command",
+        "custom command"
+    ],
     "require": {
         "php": "^7.2.5|^8.0",
         "illuminate/console": "^6.0|^7.0|^8.0",
         "illuminate/support": "^6.0|^7.0|^8.0",
+        "illuminate/config": "~6.0|~7.0|~8.0",
+        "illuminate/filesystem": "~6.0|~7.0|~8.0",
         "spatie/data-transfer-object": "^1.3|^2.8"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8",
+        "mockery/mockery": "^1.3"
     },
     "license": "MIT",
     "autoload": {
         "psr-4": {
             "Mazfreelance\\LaravelCommandGenerator\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Mazfreelance\\LaravelCommandGenerator\\TestClass\\": "tests/"
         }
     },
     "authors": [
@@ -19,5 +35,16 @@
             "email": "maz.webfreelance@gmail.com"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "config": {
+        "preferred-install": "dist"
+    },
+    "prefer-stable": true,
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Mazfreelance\\LaravelCommandGenerator\\ServiceProvider"
+            ]
+        }
+    }
 }
