--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "illuminate/support": "~9.0",
         "illuminate/config": "~9.0",
         "illuminate/filesystem": "~9.0",
-        "spatie/data-transfer-object": "~3.0"
+        "spatie/laravel-data": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8",
