--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/console": "~9.0",
+        "illuminate/console": "^6.0|^7.0|^8.0|~9.0",
         "illuminate/support": "~9.0",
         "illuminate/config": "~9.0",
         "illuminate/filesystem": "~9.0",
